# sx1276-temp-sensor

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/i2c_interface/: CMakeLists.txt  i2c_interface.c
components/i2c_interface/include/: i2c_interface.h
components/sht31_driver/: CMakeLists.txt  sht31_driver.c
components/sht31_driver/include/: sht31_driver.h
components/sht31_driver/test/: CMakeLists.txt  test_sht31_driver.c
main/: CMakeLists.txt  sx1276-esp32.c
